--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hollow-knight",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto para el curso de Desarrollo Web",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "keywords": [],
-  "author": "",
+  "author": "Germán Mansilla",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
